[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemy/character_0018.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/character_0019.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/character_0020.png" type="Texture" id=3]
[ext_resource path="res://enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 4.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 3.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 1 )

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 5.5 )
shape = SubResource( 2 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0.5, 6.75 )
shape = SubResource( 3 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0.5, -0.81 )
shape = SubResource( 4 )

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( -0.5, 5.5 )
enabled = true
cast_to = Vector2( -18, 0 )

[node name="FloorDetector2" type="RayCast2D" parent="."]
position = Vector2( -0.5, 5.5 )
enabled = true
cast_to = Vector2( 18, 0 )

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
